template baja imaging

--- a/src/index.html
+++ b/src/index.html
@@ -4,36 +4,35 @@
 	<meta charset="UTF-8">
 	<title>Links</title>
 	<style>
-	html {
-	  font-family: sans-serif;
-	  line-height: 1.15;
-	  -ms-text-size-adjust: 100%;
-	  -webkit-text-size-adjust: 100%;
-	}
 	body{
-		margin: 0;
-		text-align: center;
-		line-height: 1.5;
+		font-family: monospace;
+		font-size: 1.2rem;
 	}
-
-	ul{
-		list-style-type: none;
-		padding-left: 0;
-	}
-	a{
-		text-decoration: none;
-		color: #333;
-		border-bottom: 1px dotted #333;
-	}
+		ul{
+			list-style-type: none;
+			padding-left: 0;
+		}
+		li{
+		}
+		a{
+			text-decoration: none;
+			color: #333;
+		}
+		ul li ul{
+			list-style-type: disc;
+			padding-left: 28px;
+		}
 	</style>
 </head>
 <body>
-	<h2>Sani Newsletters</h2>
 	<ul>
 		<li><a href="layout.html">Layout</a></li>
+		<tr>
+      <td height="20">&nbsp;</td>
+    </tr>
 		<li><b>2017</b>
 			<ul>
-				<li><a href="2017/january.html">January</a></li>
+				<li><a href="2017/template-baja-imaging.html">Template Baja Imaging</a></li>
 			</ul>
 		</li>
 	</ul>
