--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,8 @@
     </tr>
 		<li><b>2017</b>
 			<ul>
-				<li><a href="2017/template-baja-imaging.html">Template Baja Imaging</a></li>
+				<li><a href="2017/template-baja-imaging.html">Template Baja Imaging</a>
+				<li><a href="2017/mediplaza.html">Template Mediplaza</a></li>
 			</ul>
 		</li>
 	</ul>
