--- a/src/index.html
+++ b/src/index.html
@@ -34,6 +34,8 @@
 			<ul>
 				<li><a href="2017/template-baja-imaging.html">Template Baja Imaging</a>
 				<li><a href="2017/mediplaza.html">Template Mediplaza</a></li>
+				<li><a href="2017/giostar-invitation-la.html">GIOSTAR LA</a>
+				<li><a href="2017/sani-invitation-la.html">Sani LA</a>
 			</ul>
 		</li>
 	</ul>
