free quote template

--- a/src/index.html
+++ b/src/index.html
@@ -36,6 +36,7 @@
 				<li><a href="2017/mediplaza.html">Template Mediplaza</a></li>
 				<li><a href="2017/giostar-invitation-la.html">GIOSTAR LA</a>
 				<li><a href="2017/sani-invitation-la.html">Sani LA</a>
+				<li><a href="2017/free-quote.html">Free Quote</a>
 			</ul>
 		</li>
 	</ul>
